# smolagents-quickstart-template

./: .gitignore  LICENSE  README.md  env.example  main.py  pyproject.toml  run.sh
agents/: base_agent.py  example_code_agent.py  example_manager_agent.py  example_tool_calling_agent.py
data/agent_workspace/example_codes/: car.c
data/agent_workspace/example_docs/: alan_turing.md
docs/: api_key.md  how_to.md
mcp_manager/: mcp_config.json  mcp_manager.py
prompts/: prompts.py
toolkits/: example_joke_toolkit.py  filesystem_toolkit.py
ui/: base_ui.py  gradio_agent_ui.py
