[project]
name = "smolagents-quickstart-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "langchain-community>=0.3.30",
    "loguru>=0.7.3",
    "openai<1.100.0",
    "smolagents[extra1,extra2,gradio,litellm,mcp,toolkit]>=1.21.1",
]
